# endochain

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ai_integrations/: __init__.py  aidoc.py  bayesian_fusion.py  med_gemini.py  openevidence.py  tempus.py  universal_caller.py  viz_ai.py
backend/: __init__.py  config.py  main.py  middleware.py
backend/routers/: __init__.py  ai_platforms.py  assessments.py  audit.py  evg.py  fhir.py  patients.py
core/: __init__.py  audit.py  edf_processor.py  lei_v.py  viduya_constants.py  viduya_glyph.py
docs/: documentation-pack.md  index.md  master-manual.md
docs/clinical/: operations-guide.md  sop.md
docs/fda-submission/: README.md
docs/fda-submission/01-device-description/: 510k-summary.md  device-description.md
docs/fda-submission/02-substantial-equivalence/: predicate-comparison.md
docs/fda-submission/03-testing/: biocompatibility-iso10993.md  cybersecurity-assessment.md  software-documentation-iec62304.md
docs/publications/: ENDOCHAIN_Primary_Publication.md
docs/regulatory/: ip-strategy.md  prd.md  registry-entry.md
docs/technical/: protocol.md  technical-documentation.md  whitepaper.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: GlyphVisualization.tsx  LEIVGauge.tsx  Layout.tsx
frontend/src/pages/: Assessment.tsx  AuditLog.tsx  Dashboard.tsx  GlyphViewer.tsx  PatientHistory.tsx  UploadPage.tsx
hardware/: __init__.py  openbci_evg.py  rsl_placement.py  signal_processor.py
scripts/: generate_clinical_report.py  generate_documentation.py
tests/: __init__.py  test_backend_api.py  test_core_lei_v.py  test_viduya_constants_immutable.py
