# ENDOCHAIN-VIDUYA-2025 Project Configuration
# Viduya Family Legacy Glyph © 2025 – All Rights Reserved

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "endochain-viduya"
version = "1.0.0"
description = "Geometrically-anchored, non-invasive endometriosis diagnostic system"
readme = "README.md"
license = {text = "Proprietary - Viduya Family Legacy Glyph © 2025"}
authors = [
    {name = "Ariel Viduya Manosca", email = "ariel@iamvc.org"},
    {name = "IAMVC Holdings LLC", email = "research@endochain.org"}
]
maintainers = [
    {name = "IAMVC Holdings LLC", email = "research@endochain.org"}
]
keywords = [
    "endometriosis", "diagnostics", "medical-ai", "FHIR", "biosignal",
    "geometric-entropy", "LEI-V", "viduya-glyph"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "sympy>=1.12",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiohttp>=3.9.0",
    "fhir.resources>=7.0.0",
    "pyserial>=3.5",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "black>=23.12.0",
    "mypy>=1.8.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

[project.urls]
Homepage = "https://endochain.org"
Documentation = "https://docs.endochain.org"
Repository = "https://github.com/endochain/endochain-viduya-2025"

[project.scripts]
endochain-server = "backend.main:run_server"

[tool.setuptools.packages.find]
include = ["core*", "backend*", "ai_integrations*", "hardware*"]

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["core", "backend", "ai_integrations", "hardware"]

# Black configuration
[tool.black]
target-version = ["py311"]
line-length = 100

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

# Coverage configuration
[tool.coverage.run]
source = ["core", "backend", "ai_integrations"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
fail_under = 95

